# DART-project

./: .gitignore  Dockerfile  README.md
ingestion/: CMakeLists.txt
ingestion/src/: ingestion_service.cpp  main.cpp
schema/: permit.proto
